--- a/app/package.json
+++ b/app/package.json
@@ -2,5 +2,20 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1"
-  }
+  },
+  "name": "app",
+  "version": "1.0.0",
+  "main": "app.js",
+  "bin": {
+    "app": "bin/www.js"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "start": " node ./bin/www.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "kwonilgun",
+  "license": "MIT",
+  "description": ""
 }
