--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nodemon": "^2.0.19"
   },
   "name": "app",
   "version": "1.0.0",
@@ -9,9 +10,8 @@
   "bin": {
     "app": "bin/www.js"
   },
-  "devDependencies": {},
   "scripts": {
-    "start": " node ./bin/www.js",
+    "start": " nodemon ./bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
