--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "node-fetch": "^2.6.7",
     "nodemon": "^2.0.19"
   },
   "name": "app",
