--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "mysql": "^2.18.1",
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.19"
   },
