--- a/app/package.json
+++ b/app/package.json
@@ -3,9 +3,11 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.7",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "winston": "^3.8.1"
   },
   "name": "app",
   "version": "1.0.0",
